--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "cors": "^2.8.5",
+    "express-rate-limit": "^7.4.0",
     "framer-motion": "^11.3.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
-    "react-tooltip": "^5.27.1"
+    "react-tooltip": "^5.27.1",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
